Allow ssh to sign data larger than the assuan line length.
Closed, ResolvedPublic

Assigned To
Authored By
werner
Dec 3 2024, 3:31 PM
Subscribers

Description

We need to use the SETDATA --append option also for signing data in scd and not just for decryption, where we introduced this with rG905b6a36d3 a long time ago

Event Timeline

werner triaged this task as Normal priority.Dec 3 2024, 3:31 PM
werner created this task.
ebo renamed this task from Allow ssh to sign larger data tha the assuan line length. to Allow ssh to sign larger data than the assuan line length..Dec 3 2024, 4:14 PM
werner renamed this task from Allow ssh to sign larger data than the assuan line length. to Allow ssh to sign data larger than the assuan line length..Dec 3 2024, 4:18 PM
gniibe changed the task status from Open to Testing.Dec 6 2024, 6:32 AM